added a chuck norris sticker and google font

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
     <title>Chuck Norris Jokes</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="header">
+      <h1>CHUCK NORRIS</h1>
+      <iframe
+        src="https://giphy.com/embed/xJZrfP8FSvB6X9N4uZ"
+        width="230"
+        height="320"
+        frameborder="0"
+        class="giphy-embed chuck-sticker"
+      ></iframe>
+    </div>
+    <div class="search">
+      <input type="text" />
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
