--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+      integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Chuck Norris Jokes</title>
+    <title>Chuck Norris Joke Generator</title>
   </head>
   <body>
     <div class="header">
-      <h1>CHUCK NORRIS</h1>
+      <h1>Chuck Norris <span class="jokes-word">Jokes</span></h1>
       <iframe
         src="https://giphy.com/embed/xJZrfP8FSvB6X9N4uZ"
         width="230"
@@ -25,8 +32,14 @@
         class="giphy-embed chuck-sticker"
       ></iframe>
     </div>
-    <div class="search">
-      <input type="text" />
+    <div class="container">
+      <form>
+        <div>
+          <label for="number">Number</label> <input type="number" id="number" />
+        </div>
+        <div><button class="get-jokes">Get Jokes</button></div>
+      </form>
+      <ul class="jokes"></ul>
     </div>
     <script src="/script.js"></script>
   </body>
